# Ten_Talks_on_New_Era_Workers

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  url.md  user.json.example
.github/workflows/: ci.yml
auto_watch_courses/: __init__.py  auto_watch.py  colors.py  login.py  selenium_client.py  selenium_server.py  watch_courses.py
