[project]
name = "auto-watch-courses"
version = "1.0.0"
description = "自动观看网课视频工具 - 支持断点续看和后台播放"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
]

[project.scripts]
auto_watch = "auto_watch_courses.auto_watch:main"
server = "auto_watch_courses.selenium_server:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
